--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'org.greenrobot.greendao'
 
 android {
     compileSdkVersion 24
@@ -8,20 +9,27 @@ android {
         applicationId "com.wgc.cmwgc"
         minSdkVersion 15
         targetSdkVersion 24
-        versionCode 16
-        versionName "2.06"
+        versionCode 21
+        versionName "2.09"
     }
-    repositories {
-        maven {
-            url "https://jitpack.io"
-        }
-    }
+//    repositories {
+//        maven {
+//            url "https://jitpack.io"
+//        }
+//    }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    greendao{
+        schemaVersion 1
+        daoPackage 'com.wgc.cmwgc.db'
+        targetGenDir 'src/main/java'
+    }
+
 }
 
 dependencies {
@@ -31,8 +39,10 @@ dependencies {
     compile project(':Wistorm')
     compile 'com.orhanobut:logger:1.3'
     compile 'com.jakewharton:butterknife:7.0.1'
-    compile 'com.github.hackware1993:MagicIndicator:1.4.0'
+//    compile 'com.github.hackware1993:MagicIndicator:1.4.0'
     compile files('libs/core.jar')
     compile 'com.android.support:design:24.0.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
+
+    compile 'org.greenrobot:greendao:3.1.0'
 }
