--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,6 +51,7 @@
     <uses-permission android:name="android.permission.CALL_PHONE" />
 
     <application
+        android:name=".app.MyApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_wo_logo"
         android:label="@string/app_name"
@@ -68,22 +69,28 @@
         <activity android:name=".activity.AboutActivity"
             android:screenOrientation="landscape"
             android:theme="@style/AppTheme.NoActionBar"
-            android:label="@string/about_vrd"></activity>
+            android:label="@string/about_vrd"/>
 
         <activity android:name=".activity.DeviceActivity"
             android:screenOrientation="landscape"
             android:theme="@style/AppTheme.NoActionBar"
-            android:label="@string/device_info"></activity>
+            android:label="@string/device_info"/>
 
         <activity android:name=".activity.CarMasterActivity"
             android:screenOrientation="landscape"
             android:theme="@style/AppTheme.NoActionBar"
-            android:label="@string/car_master"></activity>
+            android:label="@string/car_master"/>
 
         <activity android:name=".activity.CarTeamActivity"
             android:screenOrientation="landscape"
             android:theme="@style/AppTheme.NoActionBar"
-            android:label="@string/car_team"></activity>
+            android:label="@string/car_team"/>
+
+        <activity android:name=".activity.AppInfoActivity"
+            android:screenOrientation="landscape"
+            android:theme="@style/AppTheme.NoActionBar"
+            android:label="@string/app_info"/>
+
         <!-- ******************************************************************* -->
         <!-- 高德地图  本机： 279d240f0c19c181144e650a611ff10e
         	原版：95cf7a831064bf4fd6d2d01d894bc7fb -->
@@ -103,24 +110,17 @@
             android:value="86e3ddeb8db36cbf68f10a8b7d05e7ac" />
         <!--  *******************************************************************  -->
 
-
-        <service
-            android:name=".service.HttpService"
+        <service android:name=".service.HttpService"
             android:enabled="true"
-            android:exported="true">
-            <!--<intent-filter android:priority="1000"></intent-filter>-->
+            android:exported="true"
+            android:process=":process1">
         </service>
-
-        <!--<service android:name="com.amap.api.location.APSService"></service>-->
 
         <receiver android:name=".receiver.BootUpReceiver">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
-                <action android:name="android.intent.action.PACKAGE_ADDED" />
             </intent-filter>
         </receiver>
 
-
     </application>
-
 </manifest>
