--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,12 +37,13 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile project(':Wistorm')
+    compile project(':LibMarsdaemon')
     compile 'com.orhanobut:logger:1.3'
     compile 'com.jakewharton:butterknife:7.0.1'
-//    compile 'com.github.hackware1993:MagicIndicator:1.4.0'
+    //    compile 'com.github.hackware1993:MagicIndicator:1.4.0'
     compile files('libs/core.jar')
     compile 'com.android.support:design:24.0.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
-
     compile 'org.greenrobot:greendao:3.1.0'
+
 }
