--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -116,6 +116,21 @@
             android:process=":process1">
         </service>
 
+
+        <service android:name=".service.CoreServer"
+            android:enabled="true"
+            android:exported="true"
+            android:process=":process1">
+        </service>
+        <receiver android:name=".service.Receiver1" android:process=":process1"/>
+        <service android:name=".service.Service2" android:process=":process2"/>
+        <receiver android:name=".service.Receiver2" android:process=":process2"/>
+
+
+
+
+
+
         <receiver android:name=".receiver.BootUpReceiver">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
