修复离线数据提交，添加了websocket提交数据，超速报警等

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -129,7 +129,7 @@
 
 
 
-
+        <service android:name=".service.SpeedEnclosureService"/>
 
         <receiver android:name=".receiver.BootUpReceiver">
             <intent-filter>
