--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,8 +9,8 @@ android {
         applicationId "com.wgc.cmwgc"
         minSdkVersion 15
         targetSdkVersion 24
-        versionCode 23
-        versionName "2.11"
+        versionCode 25
+        versionName "2.13"
     }
 //    repositories {
 //        maven {
@@ -46,4 +46,9 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'org.greenrobot:greendao:3.1.0'
 
+    //websocket
+    compile 'org.java-websocket:Java-WebSocket:1.3.0'
+    //eventbus3.0
+    compile 'org.greenrobot:eventbus:3.0.0'
+    compile 'com.google.code.gson:gson:2.7'
 }
